# sycl-workaround

./: CMakeLists.txt  main.cc
